fix: Whitespace after page content when showing list

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ html {
 html {
   font-size: 16px; /*base for rems*/
   font-family: Arial, Helvetica, sans-serif;
+  overflow-y: hidden;
 
 }
 
